--- a/index.html
+++ b/index.html
@@ -384,27 +384,27 @@
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button data-modal-close class="modal-close-btn"><svg width="18" height="18"><use href="./images/icons.svg#modal-close"></use></svg></button>
-            <div class="order-form">
-            <h3 class="form-header">Залиште свої дані, ми вам передзвонимо</h3>
-            <form name="signup_form" autocomplete="off" novalidate class="order-service">
+            <div>
+            <p class="form-header">Залиште свої дані, ми вам передзвонимо</p>
+            <form name="signup_form" autocomplete="off" novalidate>
                 <div class="form-field">
                     <label for="name" class="label-text">Ім'я</label>
                     <input class="form-input" id="name" type="name" name="name" required />
-                    <span class="input-icon"><svg class="icon-input">
+                    <span class="input-icon"><svg width="18" height="18">
                         <use href="./images/icons.svg#user"></use>
                     </svg></span>
                 </div>
                 <div class="form-field">
                     <label for="tel" class="label-text">Телефон</label>
                     <input class="form-input" id='tel' type="tel" name="tel" />
-                    <span class="input-icon"><svg class="icon-input">
+                    <span class="input-icon"><svg width="18" height="18">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg></span>
                 </div>
                 <div class="form-field">
                     <label for="email" class="label-text">Пошта</label>
                     <input class="form-input" id="email" type="email" name="email" required />
-                    <span class="input-icon"><svg class="icon-input">
+                    <span class="input-icon"><svg width="18" height="18">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg></span>
                 </div>
@@ -416,8 +416,10 @@
                     <label class="checkbox-label" for="agree">
                     <input type="checkbox" class="checkbox" name="agreement" id="agree" required>
                     <span class="icon-check"></span>
-                    Погоджуюся з розсилкою та приймаю <a href="" class="link-agree" target="_blank">Умови договору</a>
+                    Погоджуюся з розсилкою та приймаю &nbsp;<a href="" class="link-agree" target="_blank">Умови договору</a>
                     </label>
+                </div>
+                <div class="btn-submit-centered">
                     <button type="submit" class="btn-submit">Відправити</button>
                 </div>
               </form>
